# terser-rust-experiment

./: Cargo.toml  lib-nom.rs  polyfill.js
src/: call_terser.rs  chunk.rs  chunk_to_string.rs  get_minified_chunks.rs  lib.rs  macros.rs  rope.rs  to_segments.rs  utils.rs
terser_worker/: package-lock.json  package.json  worker.js
